fixed overflow issues with photo-grid

--- a/blocks/card/__column/card__column.css
+++ b/blocks/card/__column/card__column.css
@@ -1,5 +1,6 @@
 .card__column {
   width: 50%;
+  max-width: 456px;
   height: auto;
 }
 
@@ -14,5 +15,11 @@
   .card__column:nth-of-type(2) {
     width: 288px;
     margin: 0 auto;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .card__column {
+    max-width: 352px;
   }
 }
