--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,5 +1,6 @@
 .card__image {
   width: 440px;
+  max-width: 100%; 
   height: auto;
   margin-top: 48px;
 }
@@ -13,12 +14,13 @@
 @media only screen and (max-width: 768px) {
   .card__image {
     width: 340px;
+    max-width: 100%;
   }
 }
 
 @media only screen and (max-width: 320px) {
   .card__image {
     width: 100%;
-    margin: 32px auto; 
+    margin: 32px auto;
   }
 }
