--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -8,7 +8,6 @@
   width: 100%;
   margin: 0 auto;
   margin-top: 32px;
-  color: var(--white);
 }
 
 @media only screen and (max-width: 320px) {
