--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 0 auto; 
 }
 
 .cover:before {
@@ -30,7 +31,7 @@
 }
 
 .cover:hover:before {
-  opacity: 0.8; 
+  opacity: 0.8;
 }
 
 @media only screen and (min-width: 1280px){
